feat:首页和频道页数据联通

--- a/src/app.json
+++ b/src/app.json
@@ -1,8 +1,7 @@
 {
   "pages": [
-    "pages/category/main",
     "pages/index/main",
-    "pages/counter/main"
+    "pages/category/main"
   ],
   "window": {
     "backgroundTextStyle": "light",
