--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
-    "flyio": "^0.4.9",
+    "blueimp-md5": "^2.10.0",
     "mpvue": "^1.0.11",
     "vuex": "^3.0.1"
   },
